# fasthtml-tut

./: README.md  main.py  main2.py  pyproject.toml
tests/: test_main.py
